--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "qs": "^6.10.3",
     "react": "^18.1.0",
     "react-content-loader": "^6.2.0",
